--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h3 class="wish-hbd">You are one in a melon</h3>
+          <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+          <h5 id="wishText">Happy Valentine's Day</h5>
         </div>
       </div>
       <div class="seven">
