--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="six">
         
         <div class="wish">
-          <h3 class="wish-hbd">You are one in a melon</h3>
+          <h3 class="wish-hbd">You Are One In A Melon</h3>
           <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
           <h5 id="wishText">Happy Valentine's Day</h5>
         </div>
