--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
         <div class="wish">
           <h3 class="wish-hbd">You Are One In A Melon</h3>
-          <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+          <img src="img/vector.png" alt="" class = "girl-dp" id="imagePath" />
           <h5 id="wishText">Happy Valentine's Day</h5>
         </div>
       </div>
