--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       </div>
    
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Can't wait to hang out!</p>
+        <p id="replay">Click to watch it again.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
