--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           Hey
           <span id="name">xyz</span>
         </h1>
-        <img src="img/mango.png" alt="" class="two" id="imagePath" />
+        <img src="img/mango.png" alt="" class="twoPointFive" id="mango" />
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
