--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           Hey
           <span id="name">xyz</span>
         </h1>
-        <img src="img/mango.png" alt="" class="twoPointFive" id="mango" />
         <p class="two" id="greetingText">I really like your name btw!</p>
+        <img src="img/mango.png" style="width: auto; height: 60%;" alt="" class="twoPointFive" id="mango" />
       </div>
       <div class="three">
         <p>I know I'm late but happy valentine's day!</p>
