--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Will you be my valen...
+            Thanks for all the good times and all the amazing memories!
           </p>
           <p class="fake-btn">Send</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
+        <p class="idea-1">I'm glad you're always there for me!</p>
+        <p class="idea-2">Thanks for the gifts and the warm messages!</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          I wanted to do something <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
@@ -98,7 +98,7 @@
       </div>
    
       <div class="nine">
-        <p>Can't wait to hang out!</p>
+        <p>Please say yes!</p>
         <p id="replay">Click to watch it again.</p>
         <p class="last-smile">:)</p>
       </div>
