--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">I'm glad you're always there for me!</p>
-        <p class="idea-2">Thanks for the gifts and the warm messages!</p>
+        <p class="idea-1">And thanks for always being there for me!</p>
+        <p class="idea-2">And thanks for all the gifts and the warm messages!</p>
         <p class="idea-3">
-          I wanted to do something <strong>special</strong>.
+          I want to do something <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
