--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Thanks for all the good times and all the amazing memories <3 <3
+            Thanks for all the good times and all the amazing memories &lt;3 &lt;3
           </p>
           <p class="fake-btn">Send</p>
         </div>
